# lineage-auditor

./: .gitignore  DESIGN_DOC.md  README.md  docker-compose.yml  pyproject.toml  start.sh  start_debug.py
.github/workflows/: ci.yml
infra/docker/: Dockerfile.api
src/backend/app/: config.py  database.py  main.py  supabase_client.py
src/backend/app/models/: dataset.py
src/backend/app/routers/: datasets.py  issues.py  lineage.py  profiles.py
src/backend/app/schemas/: dataset.py  issue.py
src/backend/app/services/: detectors.py  profiler.py
src/backend/app/utils/: storage.py
src/frontend/: index.html  package-lock.json  package.json  package.json.bak
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/common/: Error.jsx  Header.jsx  Loading.jsx
src/frontend/src/components/datasets/: DatasetDetail.jsx  DatasetList.jsx  DatasetProfile.jsx
src/frontend/src/components/issues/: IssueList.jsx
src/frontend/src/components/lineage/: LineageGraph.jsx
src/frontend/src/components/styles/: DatasetDetail.css  DatasetList.css  DatasetProfile.css  Error.css  Header.css  IssueList.css  LineageGraph.css  Loading.css
src/frontend/src/utils/: api.js
