[tool.poetry]
name = "lineage-auditor"
version = "0.1.0"
description = "ML-powered data quality and lineage auditor"
authors = ["Vaibhavi Thakur"]
license = "MIT"
readme = "README.md"

packages = [
  { include = "app", from = "src/backend" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
pandas = "^2.1.1"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
sentence-transformers = "^2.2.2"
torch = "^2.1.1"
pydantic-settings = "^2.0.3"
minio = "^7.1.16"
httpx = "^0.25.1"
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
